fix: add options to suppress JDK deprecation warning messages